# cristian-tovar-globant

./: README.md  globant.ipynb
.ipynb_checkpoints/: README-checkpoint.md  globant-checkpoint.ipynb
task-management/: docker-compose.yml
task-management/backend/: Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
task-management/bigdata/: Dockerfile  globant.ipynb
task-management/data/: postmaster.pid
task-management/data/base/1/: 2619
task-management/data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16423  16423_vm  16437  16437_fsm  16437_vm  16441  16469  16469_fsm  16473  16474  16478  2608  2608_fsm  2610  2619  2619_fsm  2619_vm  2658  2659  2662  2663  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2841  3455  pg_internal.init
task-management/data/global/: 1260  1262  pg_control  pg_internal.init
task-management/database/: Dockerfile  docker-compose.yml
task-management/database/data/: pg_hba.conf
task-management/database/data/base/1/: 2619  pg_internal.init
task-management/database/data/global/: 1260  2671  pg_control  pg_internal.init
task-management/database/data/pg_stat/: pgstat.stat
task-management/database/scripts/: data_setup.sql
task-management/frontend/: Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json
task-management/frontend/public/: manifest.json
task-management/frontend/src/: App.jsx  KPILine.component.jsx
task-management/test/: Dockerfile  docker-compose.yml  requirements.txt
task-management/test/tests/: __init__.py  test_api.py
(+21 files in other folders)
