[tool.poetry]
name = "task-management-backend"
version = "0.1.0"
description = "Backend package requirements"
authors = ["Cristian <Cristian>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pylint = "~2.12.2"
black = "^21.12b0"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
